fix http return bug

--- a/etc/emqx_persistence_plugin.conf
+++ b/etc/emqx_persistence_plugin.conf
@@ -23,6 +23,15 @@ persistence.webauth = off
 ## Webauth url
 ##
 persistence.webauth.url = http://localhost:2500
+##
+## Success flag
+##
+persistence.webauth.success = auth_success
+##
+## Failure flag
+##
+persistence.webauth.failure = auth_failure
+
 ##--------------------------------------------------------------------
 ## Hook Confifg
 ##--------------------------------------------------------------------
