--- a/rebar.config
+++ b/rebar.config
@@ -27,7 +27,8 @@
  [{test,
    [{deps,
      [{emqx_ct_helpers, {git, "https://github.com/emqx/emqx-ct-helpers", {tag, "1.2.2"}}},
-      {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.2.0"}}}
+      {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.2.0"}}},
+      {emqx, {git, "https://github.com/emqx/emqx", {branch, master}}}
      ]},
     {erl_opts, [debug_info]}
    ]}
