--- a/etc/emqx_persistence_plugin.conf
+++ b/etc/emqx_persistence_plugin.conf
@@ -29,6 +29,10 @@ emqx_persistence_plugin.hook.message.publish.1 = {"action": "on_message_publish"
 ##--------------------------------------------------------------------
 
 ##
+## Enable persistence
+##
+emqx_persistence_plugin.enable_persistence = off
+##
 ## Mysql host
 ##
 persistence.mysql.server = 127.0.0.1:3306
