--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {deps,
- [{ecpool, {git, "https://github.com/emqx/ecpool", {tag, "v0.4.2"}}},
+ [{ecpool, {git, "https://github.com/emqx/ecpool", {tag, "0.5.1"}}},
+  {emqx, {git, "https://github.com/emqx/emqx", {branch, "master"}}},
   {mysql, {git, "https://github.com/emqx/mysql-otp", {tag, "1.6.1"}}}
  ]}.
 
@@ -27,9 +28,9 @@
  [{test,
    [{deps,
      [{emqx_ct_helpers, {git, "https://github.com/emqx/emqx-ct-helpers", {tag, "1.2.2"}}},
-      {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.2.0"}}},
-      {emqx, {git, "https://github.com/emqx/emqx", {branch, master}}}
+      {emqx, {git, "https://github.com/emqx/emqx", {branch, "master"}}}
      ]},
     {erl_opts, [debug_info]}
    ]}
  ]}.
+
